# make_database

./: data.json  pyproject.toml
src/make_database/: authentication.py  main.py  plex_data.py  redis_db.py
src/make_database/plex/: plex_data.py  plex_test.py  tmp1.json  tmp2.json
src/make_database/testers/: plex_tester.py
src/plex/: authentication.py  plex_data.py  plex_test.py
tests/configs/: .plex_configs.json  plex_configs.json  plex_credentials.json
