[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "make_database"
description = "A test bed for developing a redis DB"
version = '0.0.1'
requires-python = ">=3.7"
dependencies = [
    "plexapi",
    "json5",
    "redis",
    # "mysqlclient",
    # "mysql-connector-python",
    # "pymysql"
]

[project.scripts]
db = "make_database.main:main"
plex = "plex.plex_test:main"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-bugbear",
    "Flake8-pyproject",
    "isort",
    "pep8-naming",
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you need NOT include the following line.
namespaces = true
where = ["src"]

[tool.flake8]
select = ["B", "C", "E", "F", "N", "W", "B9"]
extend-ignore = [
    "E203",
    "E501",
    "E722",
    "W503",
    "N802",
    "F401"
]
max-line-length = "88"
exclude = [
    "*.egg-info",
    "*.pyc",
    ".cache",
    ".eggs",
    ".git",
    ".tox",
    "__pycache__",
    "build",
    "dist",
    ".venv"
]

[tool.isort]
profile = "black"
