[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "make_database"
description = "A test bed for developing a redis DB"
version = '0.0.1'
requires-python = ">=3.7"
dependencies = [
    "plexapi",
    "json5",
    "redis"
]

[project.scripts]
db = "make_database.main:main"
testing = "make_database.main:test_db"
plex = "make_database.plex.plex_test:main"

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".cache",
    ".direnv",
    ".eggs",
    "*.egg-info",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    "*.pyc",
    "__pycache__",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".code-workspace"
]
select = ["B", "C", "E", "F", "N", "W", "B9"]
ignore = [
    "E203",
    "E501",
    "E722",
    "N802",
    "F401"
]
line-length = 88


[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you need NOT include the following line.
namespaces = true
where = ["src"]

